<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginTop="@dimen/activity_horizontal_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".AddReminderActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/layout_list_height_64">

            <android.support.design.widget.TextInputLayout
                android:id="@+id/ar_title"
                android:layout_width="match_parent"
                android:layout_height="@dimen/layout_list_height_64"
                android:background="@drawable/border_set">

                <EditText
                    android:id="@+id/ar_titleEditText"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_gravity="center_vertical"
                    android:layout_marginLeft="@dimen/layout_padding_left_16"
                    android:layout_marginRight="@dimen/layout_padding_right_32"
                    android:hint="@string/ar_title_hint"
                    android:imeOptions="actionDone"
                    android:inputType="textAutoComplete" />
            </android.support.design.widget.TextInputLayout>

        </RelativeLayout>


        <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="match_parent"
            android:layout_height="@dimen/layout_list_height_48"
            android:background="@drawable/border_set"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/icon_alarm"
                android:layout_width="@dimen/icon_layout"
                android:layout_height="@dimen/icon_layout"
                android:layout_alignParentLeft="true"
                android:layout_centerVertical="true"
                android:padding="@dimen/icon_margin"
                android:src="@drawable/ic_add_alarm_black_24dp" />

            <TextView
                android:id="@+id/ar_setAlarm"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_gravity="center_vertical"
                android:layout_toRightOf="@id/icon_alarm"
                android:text="@string/ar_setalarm"
                android:textColor="@color/colorPrimaryText" />

            <android.support.v7.widget.SwitchCompat
                android:id="@+id/ar_switch_setalarm"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:layout_marginRight="@dimen/layout_padding_right_32" />


        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/ar_rl_datetime"
            android:layout_width="match_parent"
            android:layout_height="@dimen/layout_list_height_48"
            android:background="@drawable/border_set"
            android:visibility="visible">

            <TextView
                android:id="@+id/ar_alarm"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_centerVertical="true"
                android:layout_marginLeft="@dimen/layout_padding_left_16"
                android:text="@string/ar_alarm"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:textColor="@color/colorPrimaryText"

                />

            <TextView
                android:id="@+id/ar_time"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:layout_marginRight="@dimen/layout_padding_right_32"
                android:text="@string/ar_timeView"
                android:textAppearance="?android:attr/textAppearanceSmall"

                />

            <TextView
                android:id="@+id/ar_date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_toLeftOf="@id/ar_time"
                android:paddingRight="@dimen/layout_padding_left_16"
                android:text="@string/ar_dateView"
                android:textAppearance="?android:attr/textAppearanceSmall"

                />
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/ar_rl_repeat"
            android:layout_width="match_parent"
            android:layout_height="@dimen/layout_list_height_48"
            android:background="@drawable/border_set"
            android:visibility="visible">

            <TextView
                android:id="@+id/ar_repeat"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_centerVertical="true"
                android:layout_marginLeft="@dimen/layout_padding_left_16"
                android:text="@string/ar_repeat"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:textColor="@color/colorPrimaryText"

                />

            <ImageView
                android:id="@+id/ar_repeat_arrow"
                android:layout_width="@dimen/icon_layout"
                android:layout_height="@dimen/icon_layout"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:padding="@dimen/icon_margin"
                android:src="@drawable/ic_keyboard_arrow_right_black_24dp"

                />
            <TextView
                android:id="@+id/ar_repeatView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_toLeftOf="@id/ar_repeat_arrow"
                android:text="@string/ar_repeat_never"
                android:textAppearance="?android:attr/textAppearanceSmall"

                />

            <TextView
                android:id="@+id/ar_repeat_never"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_toLeftOf="@id/ar_repeat_arrow"
                android:text="@string/ar_repeat_never"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:padding="@dimen/icon_margin"

                />
            <TextView
                android:id="@+id/ar_repeat_dayly"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_toLeftOf="@id/ar_repeat_never"
                android:text="@string/ar_repeat_dayly"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:padding="@dimen/icon_margin"
                />
            <TextView
                android:id="@+id/ar_repeat_weekly"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_toLeftOf="@id/ar_repeat_dayly"
                android:text="@string/ar_repeat_weekly"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:padding="@dimen/icon_margin"

                />


        </RelativeLayout>

        <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="match_parent"
            android:layout_height="@dimen/layout_list_height_48"
            android:background="@drawable/border_set"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/icon_priority"
                android:layout_width="@dimen/icon_layout"
                android:layout_height="@dimen/icon_layout"
                android:layout_alignParentLeft="true"
                android:layout_centerVertical="true"
                android:padding="@dimen/icon_margin"
                android:src="@drawable/ic_error_outline_black_24dp" />

            <TextView
                android:id="@+id/ar_setPriority"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_gravity="center_vertical"
                android:layout_toRightOf="@id/icon_priority"
                android:text="@string/ar_setpriority"
                android:textColor="@color/colorPrimaryText" />

            <android.support.v7.widget.SwitchCompat
                android:id="@+id/ar_switch_setpriority"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:layout_marginRight="@dimen/layout_padding_right_32" />


        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/ar_rl_priority"
            android:layout_width="match_parent"
            android:layout_height="@dimen/layout_list_height_48"
            android:background="@drawable/border_set"
            android:visibility="visible">

            <TextView
                android:id="@+id/ar_priority"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_centerVertical="true"
                android:layout_marginLeft="@dimen/layout_padding_left_16"
                android:text="@string/ar_priority"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:textColor="@color/colorPrimaryText"

                />

            <RadioGroup
                android:id="@+id/ar_rb_priority"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:layout_marginRight="@dimen/layout_padding_right_32"
                android:orientation="horizontal">

                <android.support.v7.widget.AppCompatRadioButton
                    android:id="@+id/ar_rb_lowpriority"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/ar_priorityLow"
                    android:textStyle="bold" />

                <android.support.v7.widget.AppCompatRadioButton
                    android:id="@+id/ar_rb_medpriority"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/ar_priorityMedium"
                    android:textStyle="bold" />

                <android.support.v7.widget.AppCompatRadioButton
                    android:id="@+id/ar_rb_highpriority"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/ar_priorityHigh"
                    android:textStyle="bold" />

            </RadioGroup>


        </RelativeLayout>

        <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="match_parent"
            android:layout_height="@dimen/layout_list_height_48"
            android:background="@drawable/border_set"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/icon_audio"
                android:layout_width="@dimen/icon_layout"
                android:layout_height="@dimen/icon_layout"
                android:layout_alignParentLeft="true"
                android:layout_centerVertical="true"
                android:padding="@dimen/icon_margin"
                android:src="@drawable/ic_mic_black_24dp" />

            <TextView
                android:id="@+id/ar_setaudio"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_gravity="center_vertical"
                android:layout_toRightOf="@id/icon_audio"
                android:text="@string/ar_setaudio"
                android:textColor="@color/colorPrimaryText" />

            <android.support.v7.widget.SwitchCompat
                android:id="@+id/ar_switch_setaudio"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:layout_marginRight="@dimen/layout_padding_right_32" />


        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/ar_rl_audio"
            android:layout_width="match_parent"
            android:layout_height="@dimen/layout_list_height_48"
            android:background="@drawable/border_set"
            android:visibility="visible">

            <TextView
                android:id="@+id/ar_record"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_centerVertical="true"
                android:layout_marginLeft="@dimen/layout_padding_left_16"
                android:text="@string/ar_record"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:textColor="@color/colorPrimaryText"

                />


            <ImageView
                android:id="@+id/ar_audio_record"
                android:layout_width="@dimen/icon_layout"
                android:layout_height="@dimen/icon_layout"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:layout_marginRight="@dimen/layout_padding_right_32"
                android:padding="@dimen/icon_margin"
                android:src="@drawable/ic_record_voice_over_black_24dp"

                />
            <ImageView
                android:id="@+id/ar_audio_play"
                android:layout_width="@dimen/icon_layout"
                android:layout_height="@dimen/icon_layout"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:layout_marginRight="@dimen/layout_padding_right_32"
                android:padding="@dimen/icon_margin"
                android:src="@drawable/ic_play_arrow_black_36dp"

                />
            <ImageView
                android:id="@+id/ar_audio_stop"
                android:layout_width="@dimen/icon_layout"
                android:layout_height="@dimen/icon_layout"
                android:layout_centerVertical="true"
                android:layout_toLeftOf="@id/ar_audio_play"
                android:padding="@dimen/icon_margin"
                android:src="@drawable/ic_stop_black_24dp"

                />
            <ImageView
                android:id="@+id/ar_audio_clear"
                android:layout_width="@dimen/icon_layout"
                android:layout_height="@dimen/icon_layout"
                android:layout_centerVertical="true"
                android:layout_toLeftOf="@id/ar_audio_stop"
                android:padding="@dimen/icon_margin"
                android:src="@drawable/ic_clear_black_24dp"

                />


        </RelativeLayout>


    </LinearLayout>

</android.support.v4.widget.NestedScrollView>